--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,14 +12,14 @@ theme:
     - content.code.copy
   palette:
     - scheme: default
-      primary: purple
-      accent: deep purple
+      primary: pink
+      accent: light pink
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
     - scheme: slate
-      primary: deep purple
-      accent: purple
+      primary: light pink
+      accent: pink
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
