--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,7 @@ nav:
   - Appendix:
       - References: Appendix/references.md
 
-  - Copyright: copyright.md
+  - Copyright: Copyright.md
 
 markdown_extensions:
   - admonition
@@ -84,6 +84,7 @@ markdown_extensions:
   - pymdownx.inlinehilite
 plugins:
   - search
+
 
 extra_css:
   - styles/extra.css
