Enhance Phase 2 documentation and EER diagrams
- Updated design explanation in design-explanation.md to clarify design decisions and entity relationships.
- Revised EER diagram in eer-diagram.md to better represent core entities and relationships, including cardinality and participation constraints.
- Added new HTML files for Family Medical History and User Access Control EER diagrams to provide detailed visual representations.
- Updated mkdocs.yml to include a link to the new PDF report for Phase 2.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ nav:
   - Phase 2 - Conceptual Design:
       - EER Diagram: Phase 2/eer-diagram.md
       - Design Explanation: Phase 2/design-explanation.md
+      - PDF Report: Phase 2/report.md
 
   - Phase 3 - Logical Design:
       - Relational Schema: Phase 3/relational-schema.md
